fix: add flicker fix to layout

--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -1,7 +1,7 @@
 @import 'shared';
 
 .Landing {
-  opacity: 0;
+  // opacity: 0;
 
   > .greeting {
     max-width: 144rem;
